fixed spacing issues

--- a/main.css
+++ b/main.css
@@ -1,86 +1,34 @@
 *{
    list-style:none;
- }
-
-
- .octodex{
- display:flex;
- flex-direction:row;
- max-width:100%;
- box-sizing:border-box;
- }
- .octocat{
-   width:100%;
-   display:inline-block;
- height:auto;
-
 
  }
- img{
-   width:95%;
-   height:auto;
+.octocat{
+  display:inline-block;
+  width:30%;
+
+}
+
+ .octocat img{
+   max-width:100%;
    border:1px solid grey;
    border-radius:5px;
 
  }
 
- .image-footer{
-   font-size: 16px;
-   color: #666;
-   font-weight: bold;
-   border-bottom: 1px solid #cacaca;
-   position: relative;
-   width:95%;
-  border-bottom:1px solid grey;
-  display:inline-block;
-}
-.image-footer:before{
-  content: "";
-    display: block;
-    height: 0;
-    width: 0;
-    border: 8px solid transparent;
-    border-top-color: #cacaca;
-    position: absolute;
-    right: 1px;
-    top: -4px;
-}
-
- }
- .image-number::before{
-   content:'#';
- }
- .image-number{
-       text-align:left;
-       margin-top:20px;
-
- }
  .authors img{
-   margin-top:-28px;
- position:relative;
-   float:right;
- max-width:15%;
-  margin-bottom:10px;
-  margin-right:2px;
-
+   display:inline;
+   width:10px;
  }
- .image-caption {
-   font-size: 1em;
-       margin-left: 100px;
-       position: relative;
-       top: 1px;
-       right: -37px;
+ul.authors{
+  display:inline-block;
+  padding-left:0;
+}
+.image-number::before{
+  content:"#";
+}
 
- }
- .image-caption span{
+ .image-caption{
    display:inline-block;
-   position:relative;
-   left:-40px;
- }
- .image-caption a{
-   position:relative;
-   right:40px;
-   text-decoration:none;
-   color:black;
-   font-weight: bold;
+   float:right;
+   text-align:right;
  }
